Replaced files in SwingJS branch for debugging.
Various files in the SwingJS branch have been replaced files from the osp-ejs Master branch.