@@ -200,7 +200,7 @@ public class JSliderDouble extends JSlider {
     if (ticksFormat!=null) {
       java.util.Hashtable<Integer,javax.swing.JLabel> table = new java.util.Hashtable<Integer,javax.swing.JLabel> ();
       for (int i=0; i<=RESOLUTION; i+=2*spacing)
-        table.put (new Integer(i),new javax.swing.JLabel(ticksFormat.format(minimum+i/scale)));
+        table.put (Integer.valueOf(i),new javax.swing.JLabel(ticksFormat.format(minimum+i/scale)));
       setLabelTable (table);
     }
     if (currentColor!=null) setTitleForeground(currentColor);
